MainFragment и переход на фрагмент добавления заметки.

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.omelchenkoaleks.coursepetrovnotes.screens.MainFragment"
+        android:name="com.omelchenkoaleks.coursepetrovnotes.screens.main.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
